k8s/apps/backend/dev/backend-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: backend
  namespace: igreja-dev
spec:
  type: ClusterIP
  selector:
    app: backend
  ports:
    - port: 80
      targetPort: 3000
